--- a/app/src/main/res/layout/list_item_assistant_professors.xml
+++ b/app/src/main/res/layout/list_item_assistant_professors.xml
@@ -23,7 +23,8 @@
             android:id="@+id/editAssistantProfessor"
             android:src="@drawable/ic_edit_black"
             android:layout_toLeftOf="@+id/deleteAssistantProfessor"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:visibility="gone"/>
 
         <ImageView
             android:layout_width="wrap_content"
