--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -26,150 +26,192 @@
         android:layout_margin="10dp"
         android:onClick="logout"/>
 
-    <GridLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/buttonLogout"
-        android:columnCount="1"
-        android:columnOrderPreserved="false"
-        android:padding="14dp"
-        android:rowCount="4"
-        android:rowOrderPreserved="true">
+        android:layout_below="@id/buttonLogout">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/StudyCard"
+        <GridLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_columnWeight="1"
-            android:layout_margin="16dp"
-            android:layout_row="0"
-            android:layout_rowWeight="1"
-            android:clickable="true"
-            app:cardBackgroundColor="#4c97e7"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp">
+            android:layout_height="match_parent"
+            android:layout_below="@id/buttonLogout"
+            android:columnCount="1"
+            android:columnOrderPreserved="false"
+            android:padding="14dp"
+            android:rowCount="5"
+            android:rowOrderPreserved="true">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <android.support.v7.widget.CardView
+                android:id="@+id/StudyCard"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="14dp"
-                android:orientation="vertical">
+                android:layout_column="0"
+                android:layout_columnWeight="1"
+                android:layout_margin="16dp"
+                android:layout_row="0"
+                android:layout_rowWeight="1"
+                android:clickable="true"
+                app:cardBackgroundColor="#4c97e7"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Study"
-                    android:textAlignment="center"
-                    android:textSize="18dp"
-                    android:textStyle="bold" />
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_margin="14dp"
+                    android:orientation="vertical">
 
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Study"
+                        android:textAlignment="center"
+                        android:textSize="18dp"
+                        android:textStyle="bold" />
 
-        </android.support.v7.widget.CardView>
+                </LinearLayout>
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/DepartmentCard"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_columnWeight="1"
-            android:layout_margin="16dp"
-            android:layout_row="1"
-            android:layout_rowWeight="1"
-            android:clickable="true"
-            app:cardBackgroundColor="#4c97e7"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp">
+            </android.support.v7.widget.CardView>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <android.support.v7.widget.CardView
+                android:id="@+id/DepartmentCard"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="14dp"
-                android:orientation="vertical">
+                android:layout_column="0"
+                android:layout_columnWeight="1"
+                android:layout_margin="16dp"
+                android:layout_row="1"
+                android:layout_rowWeight="1"
+                android:clickable="true"
+                app:cardBackgroundColor="#4c97e7"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Department"
-                    android:textAlignment="center"
-                    android:textSize="18dp"
-                    android:textStyle="bold" />
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_margin="14dp"
+                    android:orientation="vertical">
 
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Department"
+                        android:textAlignment="center"
+                        android:textSize="18dp"
+                        android:textStyle="bold" />
 
-        </android.support.v7.widget.CardView>
+                </LinearLayout>
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/InformationBulletinCard"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_columnWeight="1"
-            android:layout_margin="16dp"
-            android:layout_row="2"
-            android:layout_rowWeight="1"
-            android:clickable="true"
-            app:cardBackgroundColor="#4c97e7"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp">
+            </android.support.v7.widget.CardView>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <android.support.v7.widget.CardView
+                android:id="@+id/InformationBulletinCard"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="14dp"
-                android:orientation="vertical">
+                android:layout_column="0"
+                android:layout_columnWeight="1"
+                android:layout_margin="16dp"
+                android:layout_row="2"
+                android:layout_rowWeight="1"
+                android:clickable="true"
+                app:cardBackgroundColor="#4c97e7"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Information Bulletin"
-                    android:textAlignment="center"
-                    android:textSize="18dp"
-                    android:textStyle="bold" />
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_margin="14dp"
+                    android:orientation="vertical">
 
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Information Bulletin"
+                        android:textAlignment="center"
+                        android:textSize="18dp"
+                        android:textStyle="bold" />
 
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            android:id="@+id/MedicalRelatedPicturesCard"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_columnWeight="1"
-            android:layout_margin="16dp"
-            android:layout_row="3"
-            android:layout_rowWeight="1"
-            android:clickable="true"
-            app:cardBackgroundColor="#4c97e7"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp">
+                </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                android:id="@+id/MedicalRelatedPicturesCard"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="14dp"
-                android:orientation="vertical">
+                android:layout_column="0"
+                android:layout_columnWeight="1"
+                android:layout_margin="16dp"
+                android:layout_row="3"
+                android:layout_rowWeight="1"
+                android:clickable="true"
+                app:cardBackgroundColor="#4c97e7"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Medical related pictures"
-                    android:textAlignment="center"
-                    android:textSize="18dp"
-                    android:textStyle="bold" />
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_margin="14dp"
+                    android:orientation="vertical">
 
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Medical related pictures"
+                        android:textAlignment="center"
+                        android:textSize="18dp"
+                        android:textStyle="bold" />
 
-        </android.support.v7.widget.CardView>
-    </GridLayout>
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                android:id="@+id/PPTCard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_columnWeight="1"
+                android:layout_margin="16dp"
+                android:layout_row="4"
+                android:layout_rowWeight="1"
+                android:clickable="true"
+                app:cardBackgroundColor="#4c97e7"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_margin="14dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="PPTs"
+                        android:textAlignment="center"
+                        android:textSize="18dp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+        </GridLayout>
+
+    </ScrollView>
+
+
 
 </RelativeLayout>
