--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,99 +6,120 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".HomeFragment">
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="WELCOME"
-        android:textSize="20sp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:id="@+id/welcome"
-        android:layout_marginTop="10dp"
-        />
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="Home Page"
-        android:textSize="30sp"
-        android:textAlignment="center"
-        android:id="@+id/title"
-        android:layout_below="@id/welcome"
-        android:textStyle="bold"
-        />
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/recyclerViewVideoCategories"
-        android:layout_below="@+id/title">
-
-    </android.support.v7.widget.RecyclerView>
-
-    <GridLayout
-        android:id="@+id/gdView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/recyclerViewVideoCategories"
-        android:layout_weight="8"
-        android:padding="2dp"
-        android:columnCount="1"
-        android:columnOrderPreserved="false"
-        android:rowCount="1"
-        android:rowOrderPreserved="true"
-        android:alignmentMode="alignMargins"
-        android:layout_marginTop="10dp">
-
-        <android.support.v7.widget.CardView
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="2dp"
-            app:cardBackgroundColor="#4c97e7"
-            app:cardElevation="8dp"
-            app:cardCornerRadius="8dp"
-            android:clickable="true"
-            android:id="@+id/mcqCard"
-            >
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="WELCOME"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:id="@+id/welcome"
+                android:layout_marginTop="10dp"
+                />
 
-            <LinearLayout
-                android:layout_gravity="center_horizontal|center_vertical"
+            <!-- TODO: Update blank fragment layout -->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="Home Page"
+                android:textSize="30sp"
+                android:textAlignment="center"
+                android:id="@+id/title"
+                android:layout_below="@id/welcome"
+                android:textStyle="bold"
+                />
+            <android.support.v7.widget.RecyclerView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_column="0"
-                android:layout_row="0">
+                android:orientation="horizontal"
+                android:id="@+id/recyclerViewVideoCategories"
+                android:layout_below="@+id/title">
 
-                <TextView
-                    android:layout_width="wrap_content"
+            </android.support.v7.widget.RecyclerView>
+
+            <GridLayout
+                android:id="@+id/gdView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/recyclerViewVideoCategories"
+                android:layout_weight="8"
+                android:padding="2dp"
+                android:columnCount="1"
+                android:columnOrderPreserved="false"
+                android:rowCount="1"
+                android:rowOrderPreserved="true"
+                android:alignmentMode="alignMargins"
+                android:layout_marginTop="10dp">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:text="MCQ"
-                    android:textSize="18dp"
-                    android:textAlignment="center" />
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    android:layout_margin="2dp"
+                    app:cardBackgroundColor="#4c97e7"
+                    app:cardElevation="8dp"
+                    app:cardCornerRadius="8dp"
+                    android:clickable="true"
+                    android:id="@+id/mcqCard"
+                    >
 
-            </LinearLayout>
+                    <LinearLayout
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_column="0"
+                        android:layout_row="0">
 
-        </android.support.v7.widget.CardView>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:text="MCQ"
+                            android:textSize="18dp"
+                            android:textAlignment="center" />
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
 
 
-    </GridLayout>
+            </GridLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_margin="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/gdView"
-        android:orientation="horizontal"
-        android:id="@+id/recyclerViewMedicalRelatedPictures">
+            <android.support.v7.widget.RecyclerView
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/gdView"
+                android:orientation="horizontal"
+                android:id="@+id/recyclerViewMedicalRelatedPictures">
 
-    </android.support.v7.widget.RecyclerView>
+            </android.support.v7.widget.RecyclerView>
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/recyclerViewPPT"
+                android:layout_margin="10dp">
+
+            </android.support.v7.widget.RecyclerView>
+
+        </LinearLayout>
+    </ScrollView>
+
+
 
 </RelativeLayout>
