--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -128,8 +128,7 @@
             android:text="Already registered? Sign in here"
             android:textAlignment="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="registerUser"/>
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
