--- a/app/src/main/res/layout/list_of_video_categories.xml
+++ b/app/src/main/res/layout/list_of_video_categories.xml
@@ -11,7 +11,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#a49191"
+            android:background="#b39f9f"
             >
 
             <TextView
@@ -21,7 +21,7 @@
                 android:layout_gravity="center"
                 android:layout_centerInParent="true"
                 android:gravity="center"
-                android:textColor="#000000"
+                android:textColor="#ffffff"
                 android:text="No category" />
 
         </RelativeLayout>
