--- a/app/src/main/res/layout/list_item_information_bulletin_user.xml
+++ b/app/src/main/res/layout/list_item_information_bulletin_user.xml
@@ -33,6 +33,13 @@
                 android:textColor="#000000"
                 android:layout_gravity="center" />
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/infoTextView"
+                android:id="@+id/infoImageView"
+                />
+
         </RelativeLayout>
 
     </LinearLayout>
