--- a/app/src/main/res/layout/list_item_associate_professors.xml
+++ b/app/src/main/res/layout/list_item_associate_professors.xml
@@ -14,7 +14,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/associateProfessorTextView"
+            android:gravity="center"
             android:text="Name"
+            android:textSize="25sp"
             android:layout_toLeftOf="@+id/editAssociateProfessor"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
 
@@ -33,6 +35,16 @@
             android:id="@+id/deleteAssociateProfessor"
             android:src="@drawable/ic_delete_black"
             android:layout_alignParentRight="true"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/descriptionAssociateProfessor"
+            android:gravity="center"
+            android:layout_below="@+id/associateProfessorTextView"
+            android:text="Description"
+            android:textSize="20sp"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
