--- a/app/src/main/res/layout/list_item_user_professor.xml
+++ b/app/src/main/res/layout/list_item_user_professor.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -12,7 +11,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/userAssistantProfessorTextView"
+            android:id="@+id/userProfessorTextView"
             android:text="Name"
             android:gravity="center"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
@@ -20,12 +19,13 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/descriptionAssistantProfessor"
+            android:id="@+id/descriptionProfessor"
             android:gravity="center"
-            android:layout_below="@+id/userAssistantProfessorTextView"
+            android:layout_below="@+id/userProfessorTextView"
             android:text="Description"
             android:textSize="20sp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
 
     </RelativeLayout>
+
 </android.support.v7.widget.CardView>
