--- a/app/src/main/res/layout/list_item_user_associate_professors.xml
+++ b/app/src/main/res/layout/list_item_user_associate_professors.xml
@@ -18,6 +18,16 @@
             android:gravity="center"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/descriptionAssociateProfessor"
+            android:gravity="center"
+            android:layout_below="@+id/UserAssociateProfessorTextView"
+            android:text="Description"
+            android:textSize="20sp"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
