--- a/app/src/main/res/layout/activity_admin_ppt.xml
+++ b/app/src/main/res/layout/activity_admin_ppt.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/recyclerViewListOfPPTs"
+        android:orientation="horizontal"
         android:layout_margin="10dp">
 
     </android.support.v7.widget.RecyclerView>
