--- a/app/src/main/res/layout/list_of_ppts_admin.xml
+++ b/app/src/main/res/layout/list_of_ppts_admin.xml
@@ -1,24 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_height="150dp"
         android:padding="2dp"
         android:layout_margin="5dp"
         >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:padding="5dp">
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="120dp"
                 android:src="@drawable/ic_image_black"
                 android:id="@+id/imageViewPPTThumbnail"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewPPTName"
+                android:gravity="start"
+                android:textSize="15dp"
+                android:text="No name"
+                android:layout_below="@+id/imageViewPPTThumbnail"/>
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
