doctor's information bug fixed

--- a/app/src/main/res/layout/fragment_department.xml
+++ b/app/src/main/res/layout/fragment_department.xml
@@ -81,7 +81,8 @@
                         android:gravity="center"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                         android:text="Description"
-                        android:textSize="20sp"/>
+                        android:textSize="20sp"
+                        android:visibility="gone"/>
 
                 </RelativeLayout>
 
