--- a/app/src/main/res/layout/list_of_ppts_admin.xml
+++ b/app/src/main/res/layout/list_of_ppts_admin.xml
@@ -21,13 +21,24 @@
                 android:src="@drawable/ic_image_black"
                 android:id="@+id/imageViewPPTThumbnail"/>
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:id="@+id/textViewPPTName"
                 android:gravity="start"
                 android:textSize="15dp"
                 android:text="No name"
-                android:layout_below="@+id/imageViewPPTThumbnail"/>
+                android:layout_below="@+id/imageViewPPTThumbnail"
+                android:layout_toLeftOf="@+id/deletePPT"
+                android:layout_alignParentLeft="true"
+                android:layout_marginRight="5dp"
+                />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageViewPPTThumbnail"
+                android:src="@drawable/ic_delete_black"
+                android:id="@+id/deletePPT"
+                android:layout_alignParentRight="true" />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
