--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -77,6 +77,13 @@
                 android:padding="8dp"/>
 
         </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/otherCollegeTextview"
+            android:layout_marginTop="10dp"
+            android:text="If you don't find your college, click here" />
         <!--<Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
