--- a/app/src/main/res/layout/college_name_autocompletetextview.xml
+++ b/app/src/main/res/layout/college_name_autocompletetextview.xml
@@ -17,10 +17,19 @@
             android:hint="Enter College Name"/>
     </android.support.design.widget.TextInputLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textInputLayout"
+        android:id="@+id/otherCollegeTextview"
+        android:layout_marginTop="10dp"
+        android:text="If you don't find your college, click here"/>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textInputLayout"
+        android:layout_below="@+id/otherCollegeTextview"
+        android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:text="submit"
